[gd_scene load_steps=9 format=3 uid="uid://duh82fnaqlxri"]

[ext_resource type="PackedScene" uid="uid://bc0lqrr8lxyjp" path="res://main/character/abstract/character.tscn" id="1_ej5pg"]
[ext_resource type="Script" uid="uid://ct45cg13se2ef" path="res://main/enemy/abstract/enemy.gd" id="2_we6vg"]
[ext_resource type="Material" uid="uid://bpw1hml4ybam4" path="res://main/globals/Difference_colors.tres" id="3_dlg4i"]

[sub_resource type="SpriteFrames" id="SpriteFrames_faf7x"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"chase",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1i04x"]
animations = [{
"frames": [],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"damage",
"speed": 12.0
}, {
"frames": [],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tjrd4"]
radius = 32.01562

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5731b"]
bg_color = Color(0.6, 0.6, 0.90588236, 0.07450981)
corner_radius_top_left = 4
corner_radius_top_right = 1
corner_radius_bottom_right = 4
corner_radius_bottom_left = 1
shadow_size = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8jve"]
bg_color = Color(0.6, 0, 0, 0.8901961)
corner_radius_top_left = 5
corner_radius_top_right = 1
corner_radius_bottom_right = 5
corner_radius_bottom_left = 1
anti_aliasing = false
anti_aliasing_size = 0.26

[node name="Enemy" instance=ExtResource("1_ej5pg")]
collision_layer = 12
collision_mask = 7
script = ExtResource("2_we6vg")
player = NodePath("")
can_attack = true

[node name="Face" parent="." index="1"]
metadata/_edit_lock_ = true

[node name="Animation" parent="Face" index="0"]
material = ExtResource("3_dlg4i")
sprite_frames = SubResource("SpriteFrames_faf7x")
animation = &"damage"

[node name="Effects" parent="Face" index="1"]
material = ExtResource("3_dlg4i")
sprite_frames = SubResource("SpriteFrames_1i04x")
animation = &"attack"

[node name="Shadow" parent="Face" index="2"]
position = Vector2(0, 29.500002)
scale = Vector2(1.21875, 0.45312503)

[node name="AttackBox" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox" index="0"]
light_mask = 2
visibility_layer = 2
shape = SubResource("CircleShape2D_tjrd4")

[node name="AudioStreamPlayer2D" parent="." index="4"]
volume_db = -2.0

[node name="ProgressBar" type="ProgressBar" parent="." index="5"]
modulate = Color(1.6924742, 0, 0.6187194, 1)
z_index = 1
texture_filter = 3
offset_left = -14.0
offset_top = -29.0
offset_right = 14.0
offset_bottom = -25.0
theme_override_styles/background = SubResource("StyleBoxFlat_5731b")
theme_override_styles/fill = SubResource("StyleBoxFlat_b8jve")
value = 75.0
show_percentage = false

[connection signal="area_entered" from="AttackBox" to="." method="_on_attack_box_area_entered"]
[connection signal="area_exited" from="AttackBox" to="." method="_on_attack_box_area_exited"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="body_exited" from="AttackBox" to="." method="_on_attack_box_body_exited"]
